# TIMP-lab04

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: blank.yml  linux.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
